# pdp-rl-paper

./: .gitmodules
code/control/: Cargo.toml  big-test.sh  p.json  policy.sh  reward.sh  setup.sh  state.sh  tiling.sh
code/control/config/: example-policy.json  example-setup-big.json  example-setup.json  example-state-big.json  example-state.json  example-tiling-big.json  example-tiling.json
code/control/rl_control_packet/: Cargo.toml
code/control/src/: config.rs  constants.rs  lib.rs  main.rs  packet.rs  policy.rs  setup.rs  tiles.rs
code/dpdk-mirror-timer/: Makefile  main.c
code/marl-quant/: README.md  process-results.py
code/mirror-timer/: .gitignore  Cargo.toml
code/mirror-timer/src/: config.rs  constants.rs  lib.rs  main.rs  packet.rs
code/nfp/: .gitignore
code/rl-perf-tester/: Cargo.toml  lov_averager.py  opal-lat.lua  opal-stress.lua  rl-pt-on-boot.sh
code/rl-perf-tester/experiments/: test-core-ct.json  test-work-ct.json  vary-core-ct.json  vary-work-ct.json  work-strats.json
code/rl-perf-tester/src/: config.rs  constants.rs  experiment.rs  lib.rs  main.rs  verify.rs
code/rl-perf-tester/src/parsa/: mod.rs  q.rs  tilecode.rs  writeback.rs
code/rl-perf-tester/src/stress/: client.rs  host.rs  mod.rs  protocol.rs
code/rte-timer/: Cargo.toml  temp.p4cfg
interim-talk/: talk.tex
motivation-talk/: talk.tex
ngni-talk/: arista-talk.tex  noms-talk.tex  talk.tex
paper/: .gitignore  books-off.bib  confs-off.bib  misc.bib  noms-short-paper.tex  paper-10pt.tex  paper.tex  papers-off.bib  poster-abstract.tex  rfc.bib
paper/figures/: ind-coop-design-poster.afdesign  ind-coop-design-stretch.afdesign  ind-coop-design.afdesign
plots/: .gitignore  Makefile
plots/config/: preamble.cfg
poster/: poster.afpub  render-scatter.tex  render-table.tex
results/: paste  process-stress.py
results/host-rl-perf-tput/: process.py
results/marl-quant/: process-q-accs-split.csv  process-q-accs.csv  process-q-divs-split.csv  process-q-divs.csv  quant-results.csv  quant-train-0.avg.csv  quant-train-0.csv  quant-train-0.pickle  quant-train-1.avg.csv  quant-train-1.csv  quant-train-1.pickle  quant-train-10.avg.csv  quant-train-10.pickle  quant-train-11.avg.csv  quant-train-11.pickle  quant-train-12.avg.csv  quant-train-12.pickle  quant-train-13.avg.csv  quant-train-13.pickle  quant-train-14.avg.csv  quant-train-14.pickle  quant-train-15.avg.csv  quant-train-15.pickle  quant-train-16.avg.csv  quant-train-16.pickle  quant-train-17.avg.csv  quant-train-17.pickle  quant-train-18.avg.csv  quant-train-18.pickle  quant-train-19.avg.csv  quant-train-19.pickle  quant-train-2.avg.csv  quant-train-2.csv  quant-train-2.pickle  quant-train-20.avg.csv  quant-train-20.pickle  quant-train-21.avg.csv  quant-train-21.pickle  quant-train-22.avg.csv  quant-train-22.pickle  (+44 more)
results/mirror-time/: rust-nodpdk.csv
results/ring-comm-timing/: _isl_isl_times-cycles.txt  _isl_isl_times-ns.txt  _isl_isl_times-scaled-cycles.txt  _isl_isl_times-scaled-ns.txt  _me_me_times-cycles.txt  _me_me_times-ns.txt  _me_me_times-scaled-cycles.txt  (+9 more)
tables/: Makefile
(+235 files in other folders)
