[package]
name = "control"
version = "0.1.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
clap = "2"
enum_primitive = "0.1"
itertools = "0.9"
fraction = "0.6"
pnet = "0.25"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"