[package]
name = "mirror_timer"
version = "0.1.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
clap = "2"
enum_primitive = "0.1"
itertools = "0.9"
pnet = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
