[package]
name = "rl-perf-tester"
version = "0.1.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
itertools = "0.10.0"
pnet = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.control]
path = "../control"
