[package]
name = "rl-perf-tester"
version = "0.1.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "2"
chrono = "0.4"
clap = "2"
criterion = "0.3"
flume = "0.10"
gethostname = "0.2"
itertools = "0.10.0"
num_cpus = "1"
num-traits = "0.2"
pnet = "0.28"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sudo = "0.6"
tungstenite = "0.13.0"

[dependencies.control]
path = "../control"

# [patch.crates-io]
# pnet = { path = "/home/clouduser/kyles/libpnet" }
