[package]
name = "rl_control_packet"
version = "0.1.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet_macros_support = "0.25"

[build-dependencies]
glob = "0.3"
syntex = "0.42"
pnet_macros = "0.25"
